#fix call syntax for flab() and slab() vignette #1 examples

--- a/vignettes/labelr-introduction.Rmd
+++ b/vignettes/labelr-introduction.Rmd
@@ -477,7 +477,7 @@ data.frame. Again, I find this "easier done than said."
 ```{r}
 head(df)
 
-df1 <- flab(df, raceth == "Asian" & gender == "Female")
+df1 <- flab(df, raceth == "Asian" & gender == "F")
 
 head(df1, 5) # returned df1 is in terms of values, just like df
 
